# mahi-mahi-consensus

./: .gitignore  .licensesnip  Cargo.toml  README.md  deny.toml
.github/workflows/: code.yml  lint.yml  releases.yml  updates.yml
crates/mysticeti/: Cargo.toml
crates/mysticeti-core/: Cargo.toml
crates/mysticeti-core/src/: block_handler.rs  block_manager.rs  block_store.rs  committee.rs  config.rs  core.rs  data.rs  epoch_close.rs  finalization_interpreter.rs  future_simulator.rs  lock.rs  log.rs  metrics.rs  net_sync.rs  network.rs  prometheus.rs  range_map.rs  serde.rs  simulated_network.rs  simulator.rs  simulator_tracing.rs  stat.rs  state.rs  syncer.rs  synchronizer.rs  test_util.rs  threshold_clock.rs  transactions_generator.rs  types.rs  validator.rs  wal.rs
crates/mysticeti-core/src/consensus/: base_committer.rs  linearizer.rs  mod.rs  universal_committer.rs
crates/mysticeti-core/src/consensus/tests/: base_committer_tests.rs  multi_committer_tests.rs  pipelined_committer_tests.rs
crates/mysticeti-core/src/core_thread/: mod.rs  simulated.rs  spawned.rs
crates/mysticeti-core/src/runtime/: mod.rs  simulated.rs  tokio.rs
crates/mysticeti/src/: main.rs
crates/orchestrator/: Cargo.toml  readme.md
crates/orchestrator/assets/: client-parameters.yml  flamegraph.sh  grafana-dashboard.json  install_node_exporter.sh  node-parameters.yml  plot.py  settings-template.yml  settings.json
crates/orchestrator/src/: benchmark.rs  error.rs  faults.rs  logs.rs  main.rs  measurement.rs  measurements.rs  monitor.rs  orchestrator.rs  settings.rs  ssh.rs  testbed.rs
crates/orchestrator/src/client/: aws.rs  mod.rs  vultr.rs
crates/orchestrator/src/protocol/: mod.rs  mysticeti.rs
experiments/: README.md
experiments/aws/: ip-async.sh  ip-best-50.sh  ip-best.sh  ip-crash.sh  ip.sh
experiments/dedis-10/: genrate-configs.py  ip.sh  remote-test-50.sh  remote-test-async.sh  remote-test-crash-3.sh  remote-test-debug.sh  remote-test.sh  setup.sh
experiments/input-params/: input-dedis-inital-august-17.csv  input-dedis-inital-august-21.csv  input-dedis-inital-august-28.csv  input-params-10.csv  input-params-50.csv
experiments/peformance-graphs/: simple-graph.py
experiments/python/: async_network.py  client-stats.py  generate-configs.py  genrate-configs-async.py  genrate-configs.py  run-all.py  simple-graph.py
mysticeti-core/src/: committee.rs  config.rs  crypto.rs  network.rs  transactions_generator.rs  validator.rs
mysticeti/src/: main.rs
orchestrator/assets/: node-config.json  settings.json
orchestrator/src/: benchmark.rs  main.rs  measurement.rs  orchestrator.rs  settings.rs
orchestrator/src/protocol/: mod.rs  mysticeti.rs
scripts/: block-create-test.py  check.sh  client-parameters.yml  commit-test.py  dryrun.sh  node-parameters.yml  remote-test.sh  setup.sh  simple-commit-count.py
