[workspace]
members = [
    "crates/mysticeti",
    "crates/mysticeti-core",
    "crates/orchestrator",
    "crates/third-party/minibytes",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.29.1", features = ["full"] }
futures = "0.3.28"
serde = { version = "1.0.210", features = ["derive"] }
eyre = "0.6.12"
color-eyre = "0.6.3"
clap = { version = "4.5.20", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3"
tempfile = "3.6.0"
reqwest = { version = "0.11.27", features = ["json"] }

[profile.release]
panic = "abort"
debug = 1
