[package]
name = "mysticeti-core"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
bincode = "1.3.3"

blake2 = "0.10.6"
crc32fast = "1.4.2"
digest = "0.10.6"
ed25519-consensus = "2.1.0"
eyre = { workspace = true }
futures = { workspace = true }
gettid = "0.1.3"
hex = "0.4.3"
hyper = "0.14.26"
libc = "0.2.158"
memmap2 = "0.9.4"

minibytes = { path = "../third-party/minibytes", default_features = false, features = ["frommmap"] }
parking_lot = "0.12.3"
prometheus = "0.13.4"

rand = "0.8.5"
serde = { workspace = true }
serde_yaml = "0.9.21"
tabled = "0.16.0"
tempfile = { workspace = true } # todo - move to dev-dep
tokio = { workspace = true }
tracing = { workspace = true }
tracing-core = "0.1.31"
tracing-subscriber = "0.3.18"
zeroize = "1.8.1"

[dev-dependencies]
reqwest = { workspace = true }
seahash = "4.1.0"
tempdir = "0.3.7"
tracing-test = "0.2.5"

[features]
simulator = []
