[package]
name = "orchestrator"
version = "0.0.1"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
aws-config = "1.5.1"
aws-runtime = "1.2.3"
aws-sdk-ec2 = "1.51.1"
clap = { workspace = true }
color-eyre = { workspace = true }
crossterm = "0.27.0"
eyre = { workspace = true }
futures = { workspace = true }
glob = "0.3.1"
mysticeti-core = { path = "../mysticeti-core" }
plotters = "0.3.7"
prettytable-rs = "0.10"
prometheus-parse = { git = "https://github.com/asonnino/prometheus-parser.git", rev = "75334db" }
rand = "0.8.5"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.128"
serde_with = "3.9.0"
serde_yaml = "0.9.33"
ssh2 = "0.9.4"                                                                                    # TODO: remove this dependency
thiserror = "1.0.63"
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "orchestrator"
path = "src/main.rs"
